# cykubed-agent

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  alembic.ini  cloudbuild.yaml  dev-values.yaml  docker-compose.yaml  get_specs.mjs  get_token.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  release.py  requirements.txt
.github/workflows/: deploy.yaml  tests.yaml
alembic/: env.py
alembic/versions/: 20d0be213192_initial.py  3849533f183d_slack_id_and_commit_link.py  6c7180c0f857_initial.py  8e0924cdc2aa_initial.py  a1df531b6f90_added_account_table.py  a5fc526be927_initial.py  c5448f5c24b8_initial.py  c787d7415bc0_settings.py  da2d20136f28_oauth2.py  e6f75a11716e_initial.py
build-dockerfiles/: build.Dockerfile
chart/: Chart.yaml  values.yaml
chart/charts/: mongodb-13.8.2.tgz
chart/templates/: _utils.yaml  agent.yaml  config.yaml  configmap.yaml  filestore.yaml  mongo.yaml  namespace.yaml  pre-delete.yaml  priority.yaml  rbac.yaml  server.yaml  storage-class.yaml  storage.yaml  volume-snapshot.yaml
dockerfiles/agent/: Dockerfile
dockerfiles/nginx/: Dockerfile  default.conf
k8config/agent/: rbac.yaml
nginx/: Dockerfile  nginx.conf
scripts/: build-chart.sh  build-docker.sh  build-tsmodels.sh  build.sh  cache.yaml  dummypvc.yaml  get-token.sh  get_testrun.sh  gke-workload-identity.sh  gkehelm.sh  helm-dummy.sh  helm-pagekite.sh  init-minikube.sh  install-helm-pagekite.sh  install-helm.sh  kh-helm.sh  kisanhub-install.sh  logtester.py  minikube-build.sh  minikube-helm-install-singleton.sh  minikube-helm-install.sh  minikube-helm-singleton-ext.sh  minikube-testrun.sh  mongo-portforward.sh  mongo.yaml  mysql-portforward.sh  pod.yaml  priority.yaml  publish-chart.sh  publish-test.sh  rebuild.sh  server-logs.sh  singleton-redis-cli.sh  singleton-redis-portforward.sh  testrun.sh  worker-logs.sh
scripts/cloudbuild/: build-chart.sh  cb-notifier.yaml  cloudbuild-message.json
scripts/k8test/: job.yaml  pod-rwpvc.yaml  pod.yaml  pvc.yaml  sc.yaml  snapshot.yaml  ubuntu.yaml
src/: app.py  asyncmongo.py  auth.py  build.py  cache.py  cli.py  clone.py  crud.py  cykube.py  cypress.json  db.py  fsserver.py  integration.py  jobs.py  k8.py  k8utils.py  legacy.py  logs.py  main.py  messages.py  models.py  mongo.py  notify.py  report.py  schemas.py  server.py  settings.py  state.py  status.py  tasks.py  testruns.py  utils.py  watchers.py  worker.py  ws.py
src/integration/: bitbucket.py  common.py  jira.py  slack.py
src/k8config/: build-job.yaml
src/nginx/: Dockerfile  cypresshub.conf  nginx.conf
src/node/: get_spec_config.mjs  get_specs.mjs
templates/: cloudbuild.yaml
tests/: conftest.py  templatetest.py  test_cache.py  test_deploy.py  test_start_run.py  test_status.py  test_watchers.py
(+77 files in other folders)
