[tool.poetry]
name = "cykube-agent"
version = "1.0.0"
description = ""
authors = ["nick <nick@cykube.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "*"
loguru = "*"
websockets = "*"
httpx = "^0.23.1"
cachetools = "^5.2.0"
python-dateutil = "^2.8.2"
motor = "^3.1.1"
sentry-sdk = {extras = ["httpx"], version = "^1.17.0"}
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"
redis = "^4.5.2"
aioshutil = "^1.3"
dnspython = "^2.3.0"
chevron = "^0.14.0"
pydantic = "^1.10.7"
google-cloud-logging = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
python-jose = "*"
ipython = "^8.8.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"
pydantic-factories = "^1.17.2"
freezegun = "^1.2.2"
respx = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
