[tool.poetry]
name = "cykubed-agent"
version = "1.15.0"
description = ""
authors = ["Support <support@cykubed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "*"
websockets = "*"
httpx = "*"
cachetools = "^5.2.0"
python-dateutil = "^2.8.2"
sentry-sdk = {extras = ["httpx"], version = "*"}
aiofiles = "^23.1.0"
redis = {extras = ["hiredis"], version = "==4.5.4"}
aioshutil = "^1.3"
dnspython = "^2.3.0"
chevron = "^0.14.0"
pydantic = "^1.10.11"
google-cloud-logging = "^3.5.0"
aiohttp = "^3.8.4"
kubernetes-asyncio = "^24.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
python-jose = "*"
ipython = "^8.8.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"
pydantic-factories = "^1.17.2"
freezegun = "^1.2.2"
respx = "^0.20.1"
pytest-github-report = "^0.0.1"
click = "^8.1.7"
semvar = "^1.2.0"
semver = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
