[tool.poetry]
name = "cykubed-agent"
version = "3.0.0"
description = ""
authors = ["Support <support@cykubed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "*"
websockets = "*"
httpx = "*"
cachetools = "*"
python-dateutil = "*"
sentry-sdk = {extras = ["httpx"], version = "*"}
aiofiles = "*"
aioshutil = "*"
dnspython = "*"
chevron = "*"
pydantic = "1.10.12"
google-cloud-logging = "*"
kubernetes-asyncio = "*"
tenacity = "*"
aiohttp = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
python-jose = "*"
ipython = "^8.8.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"
pydantic-factories = "^1.17.2"
freezegun = "^1.2.2"
respx = "^0.20.1"
pytest-github-report = "^0.0.1"
click = "^8.1.7"
semvar = "^1.2.0"
semver = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
